# python

./: .gitignore  README.md
Python-Statistics/: 1-통계학 기본.ipynb  2-03. 파이썬 프로그래밍 기본.ipynb  2-04. numpy와 pandas 기본.ipynb  3-01. 파이썬을 이용한 기술통계_1변량데이터.ipynb  3-02. 파이썬을 이용한 기술통계_다변량데이터.ipynb  3-03. matplotlib과 seaborn을 이용한 데이터 시각화.ipynb  3-03.matplotlib과seaborn을 이용한 데이터 시각화.ipynb  3-04. 모집단에서 표본 추출 시뮬레이션.ipynb  3-05. 표본 통계량 성질.ipynb  3-06. 정규분포와 응용.ipynb  3-07. 추정.ipynb  3-08. 통계적가설검정.ipynb  3-09. 평균값의 차이 검정.ipynb  3-10. 분할표 검정.ipynb  5-01.연속형 독립변수가 하나인 모델(단순회귀).ipynb  5-02.분산분석.ipynb  5-03. 독립변수가 여럿인 모델.ipynb  6-01.여러가지 확률분포.ipynb  6-03. 로지스틱 회귀.ipynb  6-04.일반선형모델의 평가.ipynb  6-05.푸아송 회귀.ipynb  7-03. 파이썬을 이용한 리지 회귀와 라소 회귀.ipynb  7-04.선형모델과 신경망.ipynb
algorithm/: Hellow.cpp  template.cpp
algorithm/baekjoon/: 10171.py  10817.cpp  10869.py  11053.cpp  1330.py  14681.py  1655.cpp  18108.py  2480.py  25083.py  2525.py  2588.py  2752.cpp  2753.py  2884.py  9461.cpp  9498.py  aa.txt  const-tset.c  tags
algorithm/c-algo/: euclid_gcd-ex.c  ex1.c  main
algorithm/codepro/: data.cpp
algorithm/dfs/: 1.cpp
algorithm/lgsw-basic/: 4838.cpp  4839.cpp  4846.cpp  4858-1.cpp  4859-2.cpp  4859.cpp  4860.cpp  4861.cpp  4862.cpp  4866.cpp  4873.cpp  4874.cpp  4876.cpp  4877.cpp  4878.cpp  4879.cpp  4882.cpp  4890.cpp  6174.cpp
algorithm/lgswtest/: test.cpp
c/: a.out  data-type.c  queue.c  test.cpp
c++/: 1-1.cpp  1-2.cpp  1-3.cpp  cout.cpp  gravity.cpp
c++/basic/: .string.cpp.swp  1-1.cpp  1-2.cpp  break.cpp  cin-test.cpp  continue.cpp  cout.cpp  hello.cpp  lower-bound-struct.cpp  lower_bound-string.cpp  lower_bound.cpp  map.cpp  string.cpp
c++/finalexam/: a.out  과제1.cpp
c++/quiz/: a.out  ex10.cpp  ex11.cpp  ex13.cpp  ex15.cpp  ex20.cpp  q15.cpp  q22.cpp  q23.cpp  q24.cpp  q25.cpp  q26.cpp  q27.cpp  q29.cpp  q32.cpp  q39.cpp  q40.cpp  test.cpp
c++/sort/: sort.cpp
c/20171201/: 1.c  a.out
c/6contorol/: 6-1.2.c  (+21 more)
kernel/: .cache.mk  .hello.ko.cmd  .hello.mod.o.cmd  .hello.o.cmd
linux-driver/: test.c
opencv/: demo  ex2-1.c
plotly/: 1-1.ipynb  1-2.ipynb  1-3.ipynb  1-4.ipynb  app.ipynb  app.py  상장목록.xls
pointer/: '  a.out  print_address.c  vmtest.c
pyqt/: pyqt4test.py
python/: entangle-1.0.tar.xz
python/entangle-1.0/help/: meson.build
python/entangle-1.0/src/backend/: entangle-camera-automata.c  entangle-camera-file.h  entangle-camera-list.c  entangle-camera-list.h  entangle-colour-profile.c  entangle-colour-profile.h  entangle-control-choice.h  entangle-control-date.h  entangle-control-group.h  entangle-control-range.c  entangle-control-text.h  entangle-control.c  entangle-control.h  entangle-debug.h  entangle-device-manager.c  entangle-image.c  entangle-media.c  entangle-media.h  entangle-pixbuf-loader.c  entangle-pixbuf.h  entangle-progress.c  entangle-session.c  entangle-session.h  entangle-thumbnail-loader.c  entangle-thumbnail-loader.h  entangle-video.h  meson.build
python/entangle-1.0/src/frontend/: entangle-application.c  entangle-application.h  entangle-camera-manager-menus.ui  entangle-camera-manager.c  entangle-camera-manager.h  entangle-camera-picker.h  entangle-camera-picker.ui  entangle-camera-preferences.c  entangle-camera-support.ui  entangle-help-about.c  entangle-help-about.h  entangle-image-display.c  entangle-media-popup.c  entangle-media-popup.h  entangle-preferences-display.h  entangle-preferences-display.ui  entangle-preferences.c  entangle-script.c  entangle-session-browser.c  meson.build
python/entangle-1.0/src/plugins/eclipse/: eclipse.plugin  eclipse.py  meson.build
python/entangle-1.0/src/plugins/photobox/: meson.build  photobox.py
python/entangle-1.0/src/plugins/shooter/: meson.build  shooter.plugin
python_basic/entangle-1.0/: autobuild.sh  meson.build  meson_options.txt  meson_post_install.py
python_basic/entangle-1.0/build-aux/: make-dist
python_basic/entangle-1.0/docs/: meson.build
python_basic/entangle-1.0/docs/man/en/: meson.build
python_basic/entangle-1.0/docs/reference/: entangle-docs.xml  meson.build
python_basic/entangle-1.0/po/: af.po  am.po  ar.po  ast.po  bal.po  bn.po  bo.po  brx.po  bs.po  cs.po  da.po  de.po  de_CH.po  es.po  et.po  fa.po  gl.po  gu.po  he.po  hr.po  hu.po  ia.po  ilo.po  it.po  ka.po  km.po  kn.po  kw.po  lv.po  mr.po  ms.po  nds.po  nn.po  nso.po  pt.po  pt_BR.po  ru.po  si.po  sr@latin.po  te.po  (+8 more)
python_basic/entangle-1.0/src/: entangle-main.c  entangle.gresource.xml  meson.build
python_basic/entangle-1.0/src/backend/: entangle-camera-automata.h  entangle-camera-file.c  entangle-camera.c  entangle-camera.h  entangle-control-button.c  entangle-control-button.h  entangle-control-choice.c  entangle-control-date.c  entangle-control-group.c  entangle-control-range.h  entangle-control-text.c  entangle-control-toggle.c  entangle-control-toggle.h  entangle-debug.c  entangle-device-manager.h  entangle-image-loader.c  entangle-image-loader.h  entangle-image.h  entangle-pixbuf-loader.h  entangle-pixbuf.c  entangle-progress.h  entangle-video.c
python_basic/entangle-1.0/src/frontend/: entangle-application-menus.ui  entangle-camera-manager.ui  entangle-camera-picker.c  entangle-camera-preferences.h  entangle-camera-support.c  entangle-camera-support.h  entangle-control-panel.c  entangle-control-panel.h  entangle-dpms.c  entangle-dpms.h  entangle-help-about.ui  entangle-help-overlay.ui  entangle-image-display.h  entangle-image-histogram.c  entangle-image-histogram.h  entangle-media-popup.ui  entangle-media-statusbar.c  entangle-media-statusbar.h  entangle-preferences-display.c  entangle-preferences.h  entangle-script-config.c  entangle-script-simple.c  entangle-session-browser.h
python_basic/entangle-1.0/src/icons/: meson.build
python_basic/entangle-1.0/src/plugins/eclipse/: org.entangle-photo.plugins.eclipse.gschema.xml
python_basic/entangle-1.0/src/plugins/photobox/: photobox.plugin
python_basic/entangle-1.0/src/plugins/shooter/: shooter.py
shell/: print.sh
yoonsungwoo-c/: ArgcArgv.c  aa.c  ab.c  ac  ac.c  accend.c  ad.c  ae.c  af.c  calc.c  midterm.ads  test11.c  test12.c  test13.c
(+2309 files in other folders)
