sources = [
  'camera-focusing.page',
  'camera-settings.page',
  'image-capture.page',
  'image-preview.page',
  'image-storage.page',
  'index.page',
  'introduction.page',
  'multiple-cameras.page',
  'plugin-management.page',
  'plugin-photobox.page',
  'plugin-shooter.page',
  'legal.xml',
]

media = [
  'figures/entangle.png'
]

linguas = [
]

gnome.yelp(
  meson.project_name(),
  sources: sources,
  media: media,
  symlink_media: true,
  languages: linguas
)
