
plugin_sources = [
  'shooter.plugin',
  'shooter.py',
]

plugin_schemas = [
  'org.entangle-photo.plugins.shooter.gschema.xml',
]

install_data(
  sources: plugin_sources,
  install_dir: join_paths(entangle_pluginlibdir, 'shooter')
)

install_data(
  sources: plugin_schemas,
  install_dir: join_paths(entangle_plugindatadir, 'shooter', 'schemas')
)
